Created form element

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p> New paragraph added </p>
     <p> New paragraph correction </p>
     <span>this is a span element</span>
+    <form>
+        <input type="text">Text">
+        <button>click here !!</button>
+
+    </form>
 </body>
 </html>
